// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HtmlOverlay is able to handle a null child with other valid children 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "pointerEvents": "none",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <HtmlOverlayItem
    coordinates={
      Array [
        0,
        0,
        0,
      ]
    }
    x={0}
    y={0}
  >
    Map Center Zero Elevation
  </HtmlOverlayItem>
  <HtmlOverlayItem
    coordinates={
      Array [
        0,
        0,
        50000,
      ]
    }
    x={0}
    y={0}
  >
    Map Center 50km Elevation
  </HtmlOverlayItem>
</div>
`;

exports[`HtmlOverlay is able to handle a single null child 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "pointerEvents": "none",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;

exports[`HtmlOverlay is able to handle no children 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "pointerEvents": "none",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;

exports[`test HtmlOverlay map center 1`] = `
<div
  id="deckgl-wrapper"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 0,
    }
  }
>
  <canvas
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
  />
</div>
`;
